--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 }
 
 header{
-    background-color: black;
-    border: solid; color: blue;
+    
+    border: solid; color: black;
     position: absolute;
     grid-area: header;
     width: 100vw
@@ -44,8 +44,13 @@ header{
 
 main {
     grid-area: main; 
-  
+    
 
+}
+
+body{
+    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
+  
 }
 
 footer{
@@ -69,12 +74,12 @@ h1 {
     font-weight: bold;
     font-size: xx-large;
     border: solid 2px black;
-    background-color: grey;
+    background-color: black;
 }
 
 ul li a{
     text-decoration: none;
-    color: gray; 
+    color: white; 
     font-weight: bold;
     font-size: 4vh;
     line-height: 4;
@@ -173,7 +178,7 @@ select{
     background-color: black;
     padding: 2px;
     border-radius: 0px 10px 10px 0px;
-    border: solid blue;
+    border: solid black;
     width: 15vw;
     list-style-type: none;
     text-align: center;
