nuevas correciones css

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ fieldset {
     font-size: 2vh;
     margin-left: 17vw;
     margin-top: 17vh;
+    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
+  
 }
 
 legend{
@@ -132,7 +134,7 @@ select{
 .legend-dos{
     font-size: 3vh;
     font-weight: bold;
-    border: solid 2px blue;
+    border: solid 2px black;
     background-color: black;
     width: 9vw;
     text-align: center;
@@ -140,7 +142,6 @@ select{
 
 .legend-contacto{
     color:white;
-    background-color: black;
     position: absolute;
     
 
@@ -151,7 +152,7 @@ select{
 .legend-tres{
     font-size: 3vh;
     font-weight: bold;
-    border: solid 2px blue;
+    border: solid 2px black;
     background-color: black;
     width: 11vw;
     text-align: center;
@@ -160,7 +161,7 @@ select{
 .legend-cuatro{
     font-size: 3vh;
     font-weight: bold;
-    border: solid 2px blue;
+    border: solid 2px black;
     background-color: black;
     width: 5vw;
     text-align: center;
