--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ fieldset {
     position: absolute;
     height: 78vh;
     width: 78vw;
-    border: solid grey;
+    border: solid blue;
     font-size: 2vh;
     margin-left: 17vw;
     margin-top: 17vh;
@@ -136,6 +136,7 @@ select{
     font-size: 3vh;
     font-weight: bold;
     border: solid 2px black;
+    border-radius: 10px;
     background-color: black;
     width: 9vw;
     text-align: center;
@@ -157,6 +158,7 @@ select{
     background-color: black;
     width: 11vw;
     text-align: center;
+    border-radius: 10px;
 }
 
 .legend-cuatro{
@@ -166,6 +168,7 @@ select{
     background-color: black;
     width: 5vw;
     text-align: center;
+    border-radius: 10px;
 }
 
 
