--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,163 @@
+
 *{
+
     margin: 0;
+
     padding: 0;
+
     box-sizing: border-box;
 
+
 }
 
-header{
-    
-    border: solid; color: black;
-    position: absolute;
-    grid-area: header;
-    width: 100vw
 
-    
-}
 
 #grilla {
+
+    display: flex;
+
     background-color: black;
+
+    align-content: center;
+
+    flex-direction: row;
+
+    flex-wrap: nowrap;
+
+    align-items: center;
+
+    gap: 150px;
+
+    }
+
+
+header {
+
+    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
+
+}
+
+
+.header_test {
+
+   
+
+        display: flex;
+
+        flex-wrap: wrap;
+
+        flex-direction: row;
+
+        justify-content: center;
+
+        align-items: center;
+
+   
+
+}
+
+
+.header_test img {
+
+    width: 80px;
+
+}
+
+
+.main-img {
+
+    width: 350px;
+
+
+}
+
+
+h1 {
+
+    color: blue;
+
+    text-align: center;
+
+    padding: 20px;
+
+    margin: 30px;
+
+    font-weight: bold;
+
+    font-size: xx-large;
+
+    border: solid 2px black;
+
+    border-radius: 10px;
+
+   background-color: black;
+   
+
+}
+
+
+.estilo-lista {
+
+    background-color: black;
+
+    border-radius: 0px 10px 10px 0px;
+
+    border: solid blue;
+
+    list-style-type: none;
+
+    text-align: center;
+
     display: grid;
-    grid-template-columns: .5fr .5fr .5fr .5fr;
-    grid-template-rows: .5fr .5fr .5fr .08fr;
-    grid-template-areas: "nav header header header"
-                         "nav main main main"
-                         "nav main main main"
-                         "footer footer footer footer";
+
+    justify-content: center;
+
    
-   
+
+}
+
+ul li a{
+
+    text-decoration: none;
+
+    color: white; 
+
+    font-weight: bold;
+
+    font-size: 4vh;
+
+    line-height: 4;
+
+    background-color: black;
+
+    border-radius: 10px;
+
+    border: solid 2px blue;
+
+
+}
+
+
+
+footer{
+
+    text-align: center;
+
+    width: 100vw;
+
+    position: absolute;
+
+    border: 3px solid;
+
+    border-color: blue;
+
+    background-color: black;
+
+    color: white;
+
+    text-align: center;
+
+
 }
 
 #grilla-dos {
@@ -48,47 +180,7 @@ main {
 
 }
 
-body{
-    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
-  
-}
 
-footer{
-    grid-area: footer;
-    background-color: black;
-    border: 3px solid;
-    border-color:blue;
-    text-align: center;
-    margin-top: 100vh;
-    width: 100vw;
-    color: white;
-    position: absolute;
-
-}
-
-h1 {
-    color: blue;
-    text-align: center;
-    padding: 20px;
-    margin: 30px;
-    font-weight: bold;
-    font-size: xx-large;
-    border: solid 2px black;
-    border-radius: 10px;
-    background-color: black;
-}
-
-ul li a{
-    text-decoration: none;
-    color: white; 
-    font-weight: bold;
-    font-size: 4vh;
-    line-height: 4;
-    background-color: black;
-    border-radius: 10px;
-    border: solid 2px blue;
-
-}
 
 nav{
    grid-area: nav; 
@@ -99,19 +191,15 @@ nav{
 
 form{
     position: relative;
-    margin-left: 4vw;
-    margin-top: 1vh;
+ 
     color: white;
 }
 
 fieldset {
-    position: absolute;
     height: 78vh;
-    width: 78vw;
+    width: 70vw;
     border: solid blue;
     font-size: 2vh;
-    margin-left: 17vw;
-    margin-top: 17vh;
     background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
   
 }
@@ -179,17 +267,6 @@ select{
     margin-left: 35vw;
     
 }
-.estilo-lista {
-    background-color: black;
-    padding: 2px;
-    border-radius: 0px 10px 10px 0px;
-    border: solid black;
-    width: 15vw;
-    list-style-type: none;
-    text-align: center;
-   
-   
-}
 
 
 .div-uno{ 
@@ -203,7 +280,7 @@ select{
 }  
 
 .user-login{
-    background-color: blue;
+    background-color: black;
     position: absolute;
     width: 3vw;
     height: 5vh;
@@ -225,9 +302,10 @@ select{
 }
 
 .div-dos{
-    position: absolute;
-    margin-left:35vw; 
+    align-items: center;
+    
     margin-top: 10vh;
+ 
     font-size: 2vh;
 }
 
@@ -272,6 +350,7 @@ select{
 .img-contacto{
     position: absolute;
     margin-top: 5vh;
+    width: 30vw;
    
 
 
@@ -285,8 +364,14 @@ select{
 
 .imagen-dos{
     border: solid 3px blue;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
+}
+
+.imagen-tres{ 
+    border: solid 3px blue;
+    width: 300px;
+    height: 300px;
 }
 
 .form-dos{
@@ -300,9 +385,9 @@ select{
 
 @media only screen and (max-width:480px) {
         #grilla{
-            grid-template-columns: 1fr;
-            grid-template-rows: .4fr 2fr 2fr 1fr;
-            grid-template-areas: "header"
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: .2fr 1fr .2fr;
+            grid-template-areas: "header header"
                                  "main"
                                  "footer";
         }
@@ -310,12 +395,22 @@ select{
         main{
             display: flex;
             display: grid;
+            
+        }
+
+        header{
+            border: none;
+        }
+
+        footer {
+            margin-top: 100vh;
         }
 
         .estilo-lista { 
             border:none;
             display: flex;
-           
+            background-color: none;
+            width: 100%;
             
             
         } 
@@ -334,10 +429,10 @@ select{
       }
 
       .div-uno img{
-        width: 25px;
-        height: 25px;
+        width: 10px;
+        height: 10px;
         margin-left: 15vw;
-        
+        position: relative;
       }
 
 
@@ -409,7 +504,7 @@ select{
     }
     
     .div-dos{
-        margin-left: 43vw;
+        margin-left: 33vw;
     }
 
 }
