--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ h1 {
     background-color: black;
 
     border: solid blue;
-    
+
     text-align: center;
 
 }
@@ -96,7 +96,7 @@ ul li a{
     text-decoration: none;
 
     color: white;
-    
+
     font-weight: bold;
 
     font-size: 4vh;
@@ -108,8 +108,8 @@ ul li a{
     border: solid 2px blue;
 
     border-radius: 10px;
-    
-   
+
+
 }
 
 
@@ -227,7 +227,8 @@ select{
     position: absolute;
     width: 400px;
     border: solid 3px blue;
-    margin-left: 35vw;
+    margin-top: 50vh;
+
 
 }
 
@@ -251,7 +252,7 @@ select{
     float: right;
 
     color: white;
-    
+
 
 }
 
@@ -298,8 +299,6 @@ select{
 .carousel-inner {
     width: 40vw;
 
-    margin-left: 50vw;
-
     margin-top: 15vh;
 
     border: solid 5px blue;
@@ -322,14 +321,14 @@ select{
 
 }
 
-.container-img{
+/* .container-img{
     position: absolute;
     width: 40vw;
     height: 40vh;
     display: flex;
 
 
-}
+} */
 
 .div-tres{
     position: relative;
@@ -366,9 +365,9 @@ select{
 
     main{
         width: 100vw;
-        
+
     }
-    
+
 
 
         main img {
@@ -401,7 +400,7 @@ select{
             margin-left: 10vw;
         }
 
-  
+
         .estilo-lista {
             flex-direction: row;
             flex-wrap: wrap;
@@ -482,7 +481,7 @@ select{
         position: relative;
         width: 40vw;
         height: 3vh;
-        
+
      }
 
      .div-dos{
