--- a/css/style.css
+++ b/css/style.css
@@ -297,19 +297,23 @@ select{
 }
 
 .carousel-inner {
-    width: 40vw;
+    width: 60vw;
 
-    margin-top: 15vh;
+    margin-top: 4vh;
 
     border: solid 5px blue;
+    
+    object-fit:cover
 
 }
 
 .carousel-inner img{
 
-    height: 50vh;
+    height: 70vh;
 
-    width: 40vw;
+    width: 80vw;
+
+
 }
 
 .img-contacto:hover{
@@ -318,6 +322,17 @@ select{
     height: 40vh;
     transform: rotateY(360deg);
     transition: 3s ease;
+
+}
+
+#p-index{
+
+    margin-top: .5vh;
+
+    color: white;
+
+    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
+    
 
 }
 
@@ -404,9 +419,16 @@ select{
         margin-left: 2vw;
       }
 
+      #p-index{
+        width: 40vw;
+        text-align: center;
+        margin-top: 10vh;
+      }
+
       .carousel-inner{
         width: 300px;
         height: 300PX;
+        margin-top: 20vh;
       }
 
       .carousel-inner img {
