--- a/css/style.css
+++ b/css/style.css
@@ -1,518 +1,213 @@
-
-*{
-
-    margin: 0;
-
-    padding: 0;
-
-    box-sizing: border-box;
-
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 header {
-
-    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
-
+  background-image: linear-gradient(90deg, rgb(0, 0, 133) 0%, rgb(41, 33, 201) 49%, rgb(0, 212, 255) 100%);
+}
+header .header_test {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+header .header_test .header_test img {
+  width: 80px;
+}
+header h1 {
+  color: blue;
+  text-align: center;
+  padding: 20px;
+  margin: 30px;
+  font-weight: bold;
+  font-size: xx-large;
+  border: solid 2px black;
+  border-radius: 10px;
+  background-color: black;
+}
+header nav {
+  grid-area: nav;
+}
+header nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 4vh;
+  line-height: 2;
+  background-color: black;
+  border: solid 2px blue;
+  border-radius: 10px;
 }
 
-
-
-.header_test {
-
-
-
-        display: flex;
-
-        flex-wrap: wrap;
-
-
-
-        justify-content: center;
-
-        align-items: center;
-
-
-
+.estilo-lista {
+  background-color: black;
+  border: solid blue;
+  text-align: center;
 }
 
-
-.header_test img {
-
-    width: 80px;
-
+li {
+  display: inline;
 }
 
-
-.main-img {
-
-    width: 350px;
-
-
-}
-
-
-h1 {
-
-    color: blue;
-
-    text-align: center;
-
-    padding: 20px;
-
-    margin: 30px;
-
-    font-weight: bold;
-
-    font-size: xx-large;
-
-    border: solid 2px black;
-
-    border-radius: 10px;
-
-   background-color: black;
-
-
-}
-
-.estilo-lista{
-    background-color: black;
-
-    border: solid blue;
-
-    text-align: center;
-
-}
-
-li{
-
-    display: inline;
-
-
-}
-
-
-ul li a{
-    text-decoration: none;
-
-    color: white;
-
-    font-weight: bold;
-
-    font-size: 4vh;
-
-    line-height: 2;
-
-    background-color: black;
-
-    border: solid 2px blue;
-
-    border-radius: 10px;
-
-
-}
-
-
-footer{
-
-    text-align: center;
-
-    width: 100vw;
-
-    position: absolute;
-
-    border: 3px solid;
-
-    border-color: blue;
-
-    background-color: black;
-
-    color: white;
-
-    text-align: center;
-
-
-}
 main {
-    grid-area: main;
-
-    background-color: black;
-
-    height: 80vh;
-
-
+  grid-area: main;
+  background-color: black;
+  height: 80vh;
+}
+main .main-img {
+  width: 350px;
+}
+main .carousel-inner {
+  width: 60vw;
+  margin-top: 4vh;
+  border: solid 5px blue;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main .carousel-inner img {
+  height: 70vh;
+  width: 80vw;
+}
+main form {
+  position: relative;
+  color: white;
+}
+main fieldset {
+  height: 78vh;
+  width: 100vw;
+  border: solid blue;
+  font-size: 2vh;
+  background-image: linear-gradient(90deg, rgb(0, 0, 133) 0%, rgb(41, 33, 201) 49%, rgb(0, 212, 255) 100%);
+}
+main fieldset .div-uno {
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  margin-left: 1vw;
+  margin-top: 5vh;
+  display: flex;
+}
+main fieldset .div-dos {
+  margin-top: 18vh;
+  margin-right: 15vw;
+  float: right;
+  color: white;
+}
+main fieldset .div-tres {
+  position: relative;
+  margin-left: 2vw;
+  margin-top: 5vh;
+}
+main fieldset legend {
+  font-size: 3vh;
+  font-weight: bold;
+}
+main fieldset .legend-contacto {
+  color: white;
+  position: absolute;
+}
+main fieldset .legend-dos {
+  font-size: 3vh;
+  font-weight: bold;
+  border: solid 2px black;
+  border-radius: 10px;
+  background-color: black;
+  width: 9vw;
+  text-align: center;
+}
+main fieldset .legend-tres {
+  font-size: 3vh;
+  font-weight: bold;
+  border: solid 2px black;
+  background-color: black;
+  width: 11vw;
+  text-align: center;
+  border-radius: 10px;
+}
+main fieldset .legend-cuatro {
+  font-size: 3vh;
+  font-weight: bold;
+  border: solid 2px black;
+  background-color: black;
+  width: 5vw;
+  text-align: center;
+  border-radius: 10px;
+}
+main fieldset select {
+  font-size: 2vh;
+  border-radius: 5px;
+  border: solid 2px black;
+  position: relative;
+}
+main fieldset .div-botones input {
+  position: relative;
+  margin-top: 5vh;
+  width: 5vw;
+  border: solid 2px black;
+  border-radius: 5px;
+  float: right;
+}
+main fieldset .button-faros a {
+  color: black;
+  background-color: white;
+  border-radius: 5px;
+  border: solid 2px black;
+  position: absolute;
+  text-decoration: none;
+  width: 7vw;
+  height: 2vh;
+  margin-left: 86vw;
+  margin-top: 1vh;
+}
+main fieldset .button-contacto a {
+  color: black;
+  background-color: white;
+  border-radius: 5px;
+  border: solid 2px black;
+  position: absolute;
+  text-decoration: none;
+  width: 7vw;
+  height: 2vh;
+  margin-left: 29vw;
+}
+main fieldset .form-dos {
+  position: absolute;
+  margin-left: 4vw;
+  margin-top: 1vh;
+}
+main fieldset .img-1 {
+  position: absolute;
+  width: 400px;
+  border: solid 3px blue;
+  margin-top: 50vh;
+}
+main #p-index {
+  margin-top: 0.5vh;
+  color: white;
+  background-image: linear-gradient(90deg, rgb(0, 0, 133) 0%, rgb(41, 33, 201) 49%, rgb(0, 212, 255) 100%);
+}
+main .img-contacto:hover {
+  position: relative;
+  width: 40vw;
+  height: 40vh;
+  transform: rotateY(360deg);
+  transition: 3s ease;
+}
+main .img-contacto:hover .imagen-dos {
+  border: solid 3px blue;
+  width: 300px;
+  height: 300px;
 }
 
-
-
-nav{
-   grid-area: nav;
-
-}
-
-
-
-form{
-    position: relative;
-
-    color: white;
-}
-
-fieldset {
-    height: 78vh;
-    width: 100vw;
-    border: solid blue;
-    font-size: 2vh;
-    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
-
-}
-
-legend{
-    font-size: 3vh;
-    font-weight: bold;
-}
-
-
-
-select{
-    font-size: 2vh;
-    border-radius: 5px;
-    border: solid 2px black;
-    position: relative;
-}
-
-
-
-.legend-dos{
-    font-size: 3vh;
-    font-weight: bold;
-    border: solid 2px black;
-    border-radius: 10px;
-    background-color: black;
-    width: 9vw;
-    text-align: center;
-}
-
-.legend-contacto{
-    color:white;
-    position: absolute;
-
-
-
-}
-
-
-.legend-tres{
-    font-size: 3vh;
-    font-weight: bold;
-    border: solid 2px black;
-    background-color: black;
-    width: 11vw;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.legend-cuatro{
-    font-size: 3vh;
-    font-weight: bold;
-    border: solid 2px black;
-    background-color: black;
-    width: 5vw;
-    text-align: center;
-    border-radius: 10px;
-}
-
-
-.img-1{
-    position: absolute;
-    width: 400px;
-    border: solid 3px blue;
-    margin-top: 50vh;
-
-
-}
-
-
-.div-uno{
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-    margin-left: 1vw;
-    margin-top: 5vh;
-    display: flex;
-
-}
-
-
-.div-dos{
-    margin-top: 18vh;
-
-    margin-right: 15vw;
-
-    float: right;
-
-    color: white;
-
-
-}
-
-
-.div-botones input {
-    position: relative;
-    margin-top: 5vh;
-    width: 5vw;
-    border: solid 2px black;
-    border-radius: 5px;
-    float: right;
-
-
-}
-
-.button-faros a{
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-    border: solid 2px black;
-    position: absolute;
-    text-decoration: none;
-    width: 7vw;
-    height: 2vh;
-    margin-left: 86vw;
-    margin-top: 1vh;
-
-}
-
-.button-contacto a{
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-    border: solid 2px black;
-    position: absolute;
-    text-decoration: none;
-    width: 7vw;
-    height: 2vh;
-    margin-left: 29vw;
-
-
-}
-
-.carousel-inner {
-    width: 60vw;
-
-    margin-top: 4vh;
-
-    border: solid 5px blue;
-    
-    object-fit:cover
-
-}
-
-.carousel-inner img{
-
-    height: 70vh;
-
-    width: 80vw;
-
-
-}
-
-.img-contacto:hover{
-    position: relative;
-    width: 40vw;
-    height: 40vh;
-    transform: rotateY(360deg);
-    transition: 3s ease;
-
-}
-
-#p-index{
-
-    margin-top: .5vh;
-
-    color: white;
-
-    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
-    
-
-}
-
-.div-tres{
-    position: relative;
-    margin-left: 2vw;
-    margin-top: 5vh;
-}
-
-.imagen-dos{
-    border: solid 3px blue;
-    width: 300px;
-    height: 300px;
-}
-
-
-
-.form-dos{
-        position: absolute;
-        margin-left: 4vw;
-        margin-top: 1vh;
-
-
-}
-
-
-
-@media only screen and (max-widht:1200px) {
-    #grilla {
-        gap: 220px;
-    }
-}
-
-
-@media only screen and (max-width:480px) {
-
-    main{
-        width: 100vw;
-
-    }
-
-
-
-        main img {
-
-            width: 200px;
-
-            padding: 0;
-
-            margin: auto;
-
-            display: flex;
-
-        }
-
-        .img-contacto{
-            position: absolute;
-            width: 60vw;
-            height: 20vh;
-        }
-
-        .img-contacto:hover{
-            transition: none;
-            transform: none;
-            width: 62vw;
-            height: 20vh;
-        }
-
-        .container-img{
-            width: 25vw;
-            margin-left: 10vw;
-        }
-
-
-        .estilo-lista {
-            flex-direction: row;
-            flex-wrap: wrap;
-
-
-        }
-
-      ul li a{
-        font-size:3vh;
-        margin-left: 2vw;
-      }
-
-      #p-index{
-        width: 40vw;
-        text-align: center;
-        margin-top: 10vh;
-      }
-
-      .carousel-inner{
-        width: 300px;
-        height: 300PX;
-        margin-top: 20vh;
-      }
-
-      .carousel-inner img {
-        width: 300px;
-        height: 300px;
-      }
-
-      fieldset{
-        width: 100vw;
-
-      }
-
-      .img-1{
-        width: 200px;
-        height: 200px;
-        margin-left: 20vw;
-        margin-top: 45vh;
-      }
-
-      .legend-dos{
-        width: 20vw;
-        font-size: 2vh;
-      }
-
-      .legend-tres{
-        width: 25vw;
-        font-size: 2vh;
-      }
-
-      .legend-cuatro{
-        width: 10vw;
-        font-size: 2vh;
-      }
-
-      fieldset legend{
-        font-size: 2vh;
-      }
-
-     .div-botones input{
-        width: 15vw;
-        height: 3vh;
-        margin-top: 2vh;
-     }
-
-
-     .button-contacto a{
-        width: 17vw;
-        height: 5vh;
-        position: absolute;
-     }
-
-     label{
-        font-size: 2vh;
-     }
-
-     form ul li {
-        margin: 1vw;
-
-     }
-
-     input {
-        position: relative;
-        width: 40vw;
-        height: 3vh;
-
-     }
-
-     .div-dos{
-        position: absolute;
-        margin-top: 40vh;
-     }
-
-}
-
-
-@media only screen and (max-width:2160px) {
-    .div-uno img{
-        width: 350px;
-        height: 350px;
-    }
-
-    .div-dos{
-        margin-left: 33vw;
-    }
-
-}
-
+footer {
+  text-align: center;
+  width: 100vw;
+  position: absolute;
+  border: 3px solid;
+  border-color: blue;
+  background-color: black;
+  color: white;
+  text-align: center;
+}/*# sourceMappingURL=style.css.map */
