--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,113 @@
+*{
+
+    margin: 0;
+
+    padding: 0;
+
+    box-sizing: border-box;
+
+
+}
+
+
 header {
 
     background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
+    .header_test {
+
+
+
+        display: flex;
+    
+        flex-wrap: wrap;
+    
+    
+    
+        justify-content: center;
+    
+        align-items: center;
+
+        .header_test img {
+
+            width: 80px;
+        
+        }
+    
+    
+    
+    }
+
+    
+    h1 {
+
+        color: blue;
+    
+        text-align: center;
+    
+        padding: 20px;
+    
+        margin: 30px;
+    
+        font-weight: bold;
+    
+        font-size: xx-large;
+    
+        border: solid 2px black;
+    
+        border-radius: 10px;
+    
+       background-color: black;
+    
+    
+    }
+    
+
+    nav{
+        grid-area: nav;
+        ul li a{
+            text-decoration: none;
+        
+            color: white;
+        
+            font-weight: bold;
+        
+            font-size: 4vh;
+        
+            line-height: 2;
+        
+            background-color: black;
+        
+            border: solid 2px blue;
+        
+            border-radius: 10px;
+        
+        
+        }
+        
+     
+     }
+     
+}
+
+
+.estilo-lista{
+    background-color: black;
+
+    border: solid blue;
+
+    text-align: center;
 
 }
+
+
+li{
+
+    display: inline;
+
+
+}
+
+
+
+
+
