--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,6 @@
+@import "./variables";
 @import "./header";
 @import "./main";
 @import "./footer";
 @import "./mixins";
-@include reset;
 @import "./mediaqueries";
-
-
