--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4,7 +4,7 @@ main{
     
     grid-area: main;
 
-    background-color: black;
+    background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%); ;
 
     height: 80vh;
 
@@ -16,13 +16,15 @@ main{
     }
 
     .carousel-inner {
-        width: 60vw;
-    
-        margin-top: 4vh;
+        width: 50vw;
+
+        height: 60vh;
     
         border: solid 5px blue;
         
-        object-fit:cover
+        object-fit: contain;
+
+        margin-top: 10vh;
         
     
     }
@@ -30,11 +32,26 @@ main{
     
     .carousel-inner img{
 
-    height: 70vh;
+    height: 60vh;
 
-    width: 80vw;
+    }
+
+   .section-1{
+    width: 20vw;
+    height: 20vh;
+    position: absolute;
+   }
 
 
+   .section-1 p{
+        background-color: black;
+        margin-top: 25vh;
+        margin-left: 4vw;
+        font-size: large;
+        text-align: center;
+        color: blue;
+        border-radius: $border-variable;
+        
     }
 
 
@@ -48,7 +65,6 @@ main{
     fieldset {
         height: 78vh;
         width: 100vw;
-        border: solid blue;
         font-size: 2vh;
         background-image: linear-gradient(90deg, rgba(0,0,133,1) 0%, rgba(41,33,201,1) 49%, rgba(0,212,255,1) 100%);
         
@@ -124,7 +140,8 @@ main{
                 background-color: black;
                 width: 5vw;
                 text-align: center;
-                border-radius: 10px;
+                border-radius: $border-variable*2;
+             
             }
 
             select{
@@ -183,12 +200,36 @@ main{
 
             .img-1{
                 position: absolute;
-                width: 400px;
+                width: 300px;
+                height: 300px;
                 border: solid 3px blue;
-                margin-top: 50vh;
-            
-            
+                margin-top: 12vh;
+                margin-left: 19vw;
             }    
+            .img-2{
+                position: absolute;
+                width: 300px;
+                height: 300px;
+                border: solid 3px blue;
+                margin-top: 27vh;
+                margin-left: 23.5vw;
+            }
+            .img-3{
+                position: absolute;
+                width: 300px;
+                height: 300px;
+                border: solid 3px blue;
+                margin-top: 27vh;
+                margin-left: 41vw;
+            }
+            .img-4{
+                position: absolute;
+                width: 300px;
+                height: 300px;
+                border: solid 3px blue;
+                margin-top: 12vh;
+                margin-left: 25vw;
+            }
    
    
     }
